--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry: El Anillo Magico -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry: El cascanueces -->
+<li>
+  <a href="../Peliculas/pelicula833.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/evxTPd82kN4nYqM215SDBoJEROt.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tom y Jerry: El cascanueces 2007</span>
+    <span class="hidden">El edificio de la opera está vacío, Jerry desearía poder actuar y como por arte de magia, su sueño se hace realidad. El pequeño ratón es lanzado a un reino encantado donde todo es posible: bosques de caramelo, copos de nieve cantarines, ¡hasta los muñecos cobran vida!. Jerry lo pasa en grande con sus nuevos amigos y es el ratón más feliz del mundo cuando baila con la bailarina de una caja de música. Desafortunadamente, los gatos callejeros, dirigidos por Tom, irrumpen en su fiesta y raptan a la bailarina de la caja de música causando estragos en el reino de las vacaciones. Está en manos de Jerry arreglar el asunto y con la ayuda de Tuffy, un dulce ratón, y otros muchos nuevos amigos, ¡Jerry podrá conseguirlo!</span>
+  </a>
+</li>
+<!--FIN--><!-- Tom y Jerry: El Anillo Magico -->
 <li>
   <a href="../Peliculas/pelicula832.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
