--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Tom y Jerry en la Tierra de Nieve -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson: Santa Homero -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula838.html">
+    <img src="https://image.tmdb.org/t/p/original/q4nny4lnjnLYzN10EvBBRsJComp.jpg" alt="Los Simpson: Santa Homero" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Simpson: Santa Homero</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Tom y Jerry en la Tierra de Nieve -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula837.html">
     <img src="https://image.tmdb.org/t/p/original/tznOAhVFPAlYXgdrAEUOWpwIGzR.jpg" alt="Tom y Jerry en la Tierra de Nieve" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
