--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tom y Jerry en la Tierra de Nieve -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Simpson: Santa Homero -->
+<li>
+  <a href="../Peliculas/pelicula838.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q4nny4lnjnLYzN10EvBBRsJComp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Simpson: Santa Homero 2024</span>
+    <span class="hidden">Todo se complica cuando el mentalista británico Darren Brown llega a Springfield . Homero queda hipnotizado y piensa que es Santa Claus, desencadenando una serie de reacciones en todo el pueblo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tom y Jerry en la Tierra de Nieve -->
 <li>
   <a href="../Peliculas/pelicula837.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
