--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mi ano en Oxford -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- ¡Armados! -->
+<li>
+  <a href="../Peliculas/pelicula878.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dwtyFDyK5j7Tyk2kszs9poe0h5r.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">¡Armados! 2025</span>
+    <span class="hidden">Un expolicía y padre de familia, que ha trabajado en secreto para la mafia, ve su vida y la de los suyos amenazada. Cuando un nuevo jefe en la banda se hace con el poder, tendrá una noche para sacarlos de la ciudad.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mi ano en Oxford -->
 <li>
   <a href="../Peliculas/pelicula877.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
