--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Atrapado robando -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mis 84 m² -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula880.html">
+    <img src="https://image.tmdb.org/t/p/original/xhsXOE2FWBGOaHUoAnjBUW1Y1Ds.jpg" alt="Mis 84 m²" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mis 84 m²</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Atrapado robando -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula872.html">
     <img src="https://image.tmdb.org/t/p/original/oyl44sKyNdWbVajTAz6oG6DZm8V.jpg" alt="Atrapado robando" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
