--- a/Plataforma/k-drama/index.html
+++ b/Plataforma/k-drama/index.html
@@ -170,7 +170,17 @@ document.addEventListener("DOMContentLoaded", () => {
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El mismo dia contigo -->
+    <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mis 84 m² -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula880.html">
+    <img src="https://image.tmdb.org/t/p/original/xhsXOE2FWBGOaHUoAnjBUW1Y1Ds.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Mis 84 m²</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- El mismo dia contigo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula874.html">
     <img src="https://image.tmdb.org/t/p/original/lqYyrLLLpvfQLay7Q2ttUYa1wGj.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
