--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Un cuento de pescadores: La maldicion de La Miringua -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mis 84 m² -->
+<li>
+  <a href="../Peliculas/pelicula880.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/xhsXOE2FWBGOaHUoAnjBUW1Y1Ds.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Mis 84 m² 2025</span>
+    <span class="hidden">Un hombre que invirtió todos sus ahorros en un nuevo apartamento descubre que detrás de sus paredes se ocultan ruidos molestos, vecinos hostiles y secretos inquietantes.</span>
+  </a>
+</li>
+<!--FIN--><!-- Un cuento de pescadores: La maldicion de La Miringua -->
 <li>
   <a href="../Peliculas/pelicula879.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
