--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Pitufos en la aldea perdida -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Paul -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula882.html">
+    <img src="https://image.tmdb.org/t/p/original/e57pNjhWbRos9BTvgeUYUzB8VfO.jpg" alt="Paul" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Paul</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- Los Pitufos en la aldea perdida -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula862.html">
     <img src="https://image.tmdb.org/t/p/original/zqXn3gaMBNHNK7YHdYNidwWrJoT.jpg" alt="Los Pitufos en la aldea perdida" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
